src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

/* Cell */
.cell {
  display: inline-block;
  background: #345;
  text-align: center;
  vertical-align: middle;
  margin: 0.1rem;
  padding: 0.2rem;
  font-weight: 500;
  text-transform: uppercase;
  width: 1.5rem;
  height: 1.5rem;
  font-size: 1rem;
}

.cell:hover, .cell:focus {
  background: #567;
  cursor: pointer;
}

.cell.selected {
  background: #18f;
}

/* Row */
.row {
  display: flex;
  justify-content: center;
}

.rows {
  display: inline-block;
  margin: 0.2rem;
  user-select: none;
}

/* Grid */
.grid {
  display: inline-block;
  margin: 0.4rem;
  /* border: .1rem solid #38f; */
}

/* Sidebar Inner */
.sidebar-inner {
  user-select: none;
}

.sidebar-inner .button {
  color: #28f;
  font-weight: 500;
}

.sidebar-inner-gameplay .button {
  color: #4df;
  cursor: auto;
}

.sidebar-inner-actions .button:hover, .sidebar-inner-actions .button:focus {
  color: #2bf;
}

.sidebar-inner .highlight {
  font-size: 50%;
  font-weight: 700;
  color: #cde;
  text-transform: none;
}

.multiplier.plus1::before, .multiplier.minus1::before {
  color: #cde;
  opacity: 0;
  position: absolute;
  font-size: 50%;
  animation: slide-up 500ms 1;
  animation-timing-function: linear;
}

.multiplier.plus1::before {
  content: "+1";
  color: #3d4;
}

.multiplier.minus1::before {
  content: "-1";
  color: #d34;
}

/* Selection & Score */
.selection {
  padding: 0.2rem;
  text-align: right;
  height: 100%;
  min-height: 100%;
  max-width: 100vmin;
  /* border-bottom: .1rem solid #38f; */
}

.selection-wrapper {
  text-align: right;
  overflow: auto;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  -webkit-overflow-scrolling: touch;
}
.selection-wrapper,
.modal-body {
  scrollbar-color: #888 transparent;
  scrollbar-width: thin;
  scroll-behavior: smooth;
}
.selection-wrapper::-webkit-scrollbar,
.modal-body::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}
.selection-wrapper::-webkit-scrollbar-track,
.modal-body::-webkit-scrollbar-track {
  background: transparent;
}
.selection-wrapper::-webkit-scrollbar-thumb,
.modal-body::-webkit-scrollbar-thumb {
  background: #888;
}
.selection-wrapper::-webkit-scrollbar-thumb:hover,
.modal-body::-webkit-scrollbar-thumb:hover {
  background: #555;
}
.selection-wrapper::-webkit-scrollbar-corner,
.modal-body::-webkit-scrollbar-corner {
  display: none;
}

.selection-info {
  font-size: 50%;
  display: flex;
  flex-wrap: nowrap;
  justify-content: flex-start;
}

/* SETTINGS - Grid Sizes */
.grid-box-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, 44px);
  grid-column-gap: 8px;
  grid-row-gap: 4px;
}

.grid-box {
  width: 44px;
  height: 44px;
  padding: 4px;
  font-size: 22px;
  font-weight: 600;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  border: .1rem solid #cde;
  border-radius: 50%;
}

.grid-box:hover {
  border: 0.1rem solid #28f;
  cursor: pointer;
}

.grid-box.selected {
  border: 0.1rem solid #28f;
  background: #28f;
  color: #fff;
}

/* Section */
.section {
  padding: 5rem 1rem;
}
.section-sm {
  padding: 3rem 1rem;
}
.section-xs {
  padding: 1.5rem 0.5rem;
}

/* Shake */
.shake {
  animation: shake 100ms 10;
  animation-timing-function: linear;
}

@keyframes shake {
  0% { transform: translate(0.1rem, 0); }
  50% { transform: translate(-0.1rem, 0); }
  100% { transform: translate(0.1rem, 0); }
}

/* Color Flash */
.flash-error {
  animation: flash-error 250ms 2;
}

@keyframes flash-error {
    0% { background-color: none; }
    50% { background-color: #d34; }
    100% { background-color: none; }
}

.flash-success {
  animation: flash-success 250ms 2;
}

@keyframes flash-success {
    0% { background-color: none; }
    50% { background-color: #3d4; }
    100% { background-color: none; }
}

/* Slide Up */
@keyframes slide-up {
  0% {
    transform: translateY(0);
    opacity: 1; }
  100% {
    transform: translateY(-1.1rem);
    opacity: 0; }
}

